--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 <!-- Chevrolet Onix -->
                 <div class="car-card bg-white rounded-lg overflow-hidden shadow-md transition duration-300">
-                    <img src="/src/imgs/onix.jpg" alt="Foto do Chevrolet Onix, modelo econômico popular"
+                    <img src="src/imgs/onix.jpg" alt="Foto do Chevrolet Onix, modelo econômico popular"
                         class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-brown-dark mb-2">Chevrolet Onix</h3>
@@ -171,7 +171,7 @@
 
                 <!-- Hyundai HB20 -->
                 <div class="car-card bg-white rounded-lg overflow-hidden shadow-md transition duration-300">
-                    <img src="/src/imgs/hb20.jpg" alt="Foto do Hyundai HB20, modelo econômico popular"
+                    <img src="src/imgs/hb20.jpg" alt="Foto do Hyundai HB20, modelo econômico popular"
                         class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-brown-dark mb-2">Hyundai HB20</h3>
